--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mochatest",
   "version": "1.0.0",
   "description": "mocha testing",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Anthony-Mendola/JS-mocha-testing/issues"
   },
-  "homepage": "https://github.com/Anthony-Mendola/JS-mocha-testing#readme"
+  "homepage": "https://github.com/Anthony-Mendola/JS-mocha-testing#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
+  }
 }
